# RPG-Game-Enhanced

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  RPenGine  a.out  log.txt  logging.md  notes.md  plan.md  somefile.txt  test_save_file.txt
campaignless/: INIT.lua
campaigns/Hello123/: INIT.lua
campaigns/Sample/: INIT.lua
campaigns/Sample/src/: fight.lua  house.lua  shop.lua  start.lua
campaigns/abc/: INIT.lua
campaigns/test_campaign/: INIT.lua
campaigns/test_campaign/abc/abc3/: actual_code.lua
campaigns/test_campaign/abc/abc3/abc4/: test3.lua
campaigns/test_campaign/abc/abc3/abc4/abc5/abc6/: test5.lua
core/: node_data.lua  player_data.lua
docs/: change_log.md  dev_roadmap.md  notes.md  plan.md  roadmap.md
docs/Campaign/: save_format.md
docs/Dev/: load_system.md  node_system.md
docs/Logging/: notes.md
docs/Lua/: campaign.md  init.md  making_a_campaign.md  menus.md  nodes_api.md  table.md
include/: build.hpp  build_help.hpp  campaign.hpp  combine_table.hpp  custom_exception.hpp  extension.hpp  input.h  input.hpp  lua_engine_constants.hpp  nodes.h  nodes.hpp  player.hpp  save.hpp  settings.h  table.hpp  test.hpp  to_binary.hpp
include/inject/: inject_api.hpp  inject_build.hpp  inject_core.hpp
include/menus/: menus.h  menus.hpp
modules/123/: INIT.lua  abc.lua
modules/abc/: INIT.lua  abc.lua
scripts/: BUILD_FILE.lua  CAMPAIGN_FILE.lua  node_data.lua  test_extension.lua
src/: build.cpp  build_help.cpp  campaign.cpp  combine_table.cpp  extension.cpp  input.cpp  lua_engine_constants.cpp  main.c  main.cpp  nodes.c  nodes.cpp  save.cpp  table.cpp  test.cpp  test.lua
src/inject/: inject_api.cpp  inject_build.cpp  inject_core.cpp
src/menus/: menus.c  menus.cpp
